2006-03-22  Mark Mitchell  <mark@codesourcery.com>

	* configure.host: Allow hosts to set the default
	newlib_atexit_dynamic_alloc value.
	* configure.in: Likewise.
	* configure: Regenerated.

2006-03-20  Mark Mitchell  <mark@codesourcery.com>

	* acconfig.h (_ATEXIT_DYNAMIC_ALLOC): Undef.
	* configure.in (--disable-newlib-atexit-dynamic-alloc): New
	option. 
	* configure: Regenerated.
	* newlib.hin: Regenerated.
	* libc/stdlib/__atexit.c (__register_exitproc): Don't call malloc
	if _ATEXIT_DYNAMIC_ALLOC is undefined.
	* libc/stdlib/__call_atexit.c (__call_exitprocs): Don't call free
	if _ATEXIT_DYNAMIC_ALLOC is undefined.

2006-03-17  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/linux/linuxthreads/config.h: Remove definition
	of UINT32_C.

2006-03-15  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/wsetup.c (__swsetup): Don't make a buffer
	for a string I/O file that isn't using the asprintf family.

2006-03-07  Eric Blake  <ebb9@byu.net>

	* libc/stdio/freopen.c (_freopen_r) [HAVE_FCNTL]: For NULL
	filename, allow read-only or write-only FILE atop O_RDWR file
	descriptor.
	* libc/stdio64/freopen64.c (_freopen64_r) [HAVE_FCNTL]: Likewise.

2006-03-07  Jeff Johnston  <jjohnstn@redhat.com>

	* libm/common/sf_isinf.c[_DOUBLE_IS_32BITS]: Undef isinf.
	* libm/common/sf_isnan.c[_DOUBLE_IS_32BITS]: Undef isnan.

2006-03-02  Jeff Johnston  <jjohnstn@redhat.com>

	* libm/math/math.tex: Fix reference to sisnan.def which
	is now in common subdirectory.
	* libm/mathfp/mathfp.tex: Ditto.

2006-02-27  Jeff Johnston  <jjohnstn@redhat.com>

	* Makefile.am (MATHOBJS_IN_LIBC): Add s_isinfd, sf_isinff, 
	s_isnand, and sf_isnanf object files.
	* Makefile.in: Regenerated.
	* libc/include/ieeefp.h: Undef isnan and isinf to avoid
	conflict if <math.h> has previously been included.
	* libc/include/math.h
	* libc/include/math.h: Make isnan and isinf macros to
	conform to C99.
	(__isinfd, __isinff, __isnand, __isnanf): New functions.