@@ -1,3 +1,7 @@
+2006-03-29  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* libc/sys/linux/net/name6.c: Fix struct references.
+
 2006-03-22  Mark Mitchell  <mark@codesourcery.com>
 
 	* configure.host: Allow hosts to set the default
